Sun Nov 16 23:34:02 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Improve handling of systems without internationalisation support.
	Reported by Mike Frysinger.

	* include/manconfig.h.in (locale_changed): New macro.
	* src/man.c (main), src/whatis.c (main): Use it.
	* src/manconv.c (check_preprocessor_encoding, try_iconv): Declare
	  only if HAVE_ICONV is defined.
	  (manconv): If HAVE_ICONV is not defined, supply a replacement that
	  just passes data straight through.
	* src/whatis.c (simple_convert): Declare only if HAVE_ICONV is
	  defined and supply a macro replacement otherwise, since in the
	  latter case iconv_t is not defined.

Sun Nov 16 18:40:09 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* manual/misc.me (Credits): Update with contributors of
	  non-translation patches since I started maintaining man-db;
	  mention man/THANKS for translator credits. Probably still missing
	  some people, as ever ...

Sun Nov 16 18:16:55 GMT 2008  Chusslove Illich  <caslav.ilic@gmx.net>

	* src/encodings.c (directory_table): Add Serbian Latin ->
	  ISO-8859-2.
	* src/lexgrog.l (sr_name): Add another possible translation.
	  (srlatin_name): Add.

Sun Nov 16 18:00:23 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (main), src/whatis.c (main): Tokenise LANGUAGE properly
	  rather than only taking the first two characters of each entry.
	  Based on a suggestion from Chusslove Illich in Savannah patch
	  #6658.

Sun Nov 16 17:57:57 GMT 2008  Chusslove Illich  <caslav.ilic@gmx.net>

	* src/manp.c (add_nls_manpath): Check that modifiers match if set
	  (Savannah patch #6658).

Wed Nov 12 12:32:17 GMT 2008  Arif E. Nugroho  <arif_endro@yahoo.com>

	* po/id.po: New from Translation Project.
	* po/LINGUAS: Add id.
	* man/THANKS: Add translator credit.

Sun Nov  9 16:23:12 GMT 2008  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Sun Oct 26 12:44:42 GMT 2008  Colin Watson  <cjwatson@debian.org>
