@@ -1,3 +1,15 @@
+Mon Nov 17 00:06:28 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	Make bare .so includes (i.e. ".so foo.1" rather than ".so
+	man1/foo.1") work, although only within the same manual page
+	hierarchy for now. Reported by Mike Frysinger; partially fixes
+	Debian bug #503472.
+
+	* src/zsoelim.l (zsoelim_open_file): Attempt to handle bare .so
+	  includes using look_for_file.
+	* src/Makefile.am (zsoelim_SOURCES): Add globbing.c, globbing.h, and
+	  util.c.
+
 Sun Nov 16 23:34:02 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	Improve handling of systems without internationalisation support.
